feat: create basic Component Создание базового компонента

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>AVTOSALON</title>
-   <link rel="icon" type="image/x-icon" href="/src/assets/icon.png">
+   <link rel="icon" href="./assets/icon.png">
    <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&display=swap" rel="stylesheet">
 </head>
 <body>
-   <p>Бумеранг изобрели в Австралии, а у нас грабли есть</p>
+  
 </body>
 </html>
